--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,14 @@ Description: A convex hull data structure is converted into a half-edge data
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 URL: https://github.com/JeffLansing/halfedgedatastructr
 BugReports: https://github.com/JeffLansing/halfedgedatastructr/issues
+Imports:
+  magrittr,
+  pracma
+Suggests: 
+    testthat (>= 3.0.0),
+    stringr,
+    rgraph6
+Config/testthat/edition: 3
