--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://github.com/JeffLansing/halfedgedatastructr
+URL: https://github.com/JeffLansing/halfedgedatastructr, https://jefflansing.github.io/halfedgedatastructr/
 BugReports: https://github.com/JeffLansing/halfedgedatastructr/issues
 Imports:
   magrittr,
