--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,8 @@ export(Face)
 export(HalfEdge)
 export(HalfEdgeDataStructure)
 export(Vertex)
+export(coedgelist_from_he_ds)
+export(edgelist_from_he_ds)
+export(get_display_info)
 import(magrittr)
 importFrom(pracma,cross)
