--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(HalfEdge)
 export(HalfEdgeDataStructure)
 export(Vertex)
 export(coedgelist_from_he_ds)
+export(display_hes)
 export(edgelist_from_he_ds)
 export(get_display_info)
 import(magrittr)
