Revise rgl usage following the example of title: "User Interaction in WebGL (updated)" author: "Duncan Murdoch"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,10 @@ export(Face)
 export(HalfEdge)
 export(HalfEdgeDataStructure)
 export(Vertex)
+export(adjmats_from_info)
 export(coedgelist_from_he_ds)
-export(display_hes)
 export(edgelist_from_he_ds)
-export(get_display_info)
+export(edgelist_to_adjmat)
+export(hull_plus_g6)
 import(magrittr)
 importFrom(pracma,cross)
