--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: halfedgedatastructr
 Title: Provide a half-edge data structure for a 3d convex polytope
-Version: 0.0.0.9004
+Version: 0.0.0.9005
 Authors@R: 
     person("Jeff", "Lansing", , "lansing2357@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
@@ -27,7 +27,8 @@ Suggests:
     kableExtra,
     cxhull,
     rgl (>= 1.3.0),
-    permutations
+    permutations,
+    ggplot2
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 Depends: 
